--- a/CanfieldCodingChallenge/CanfieldCodingChallenge/Info.plist
+++ b/CanfieldCodingChallenge/CanfieldCodingChallenge/Info.plist
@@ -43,5 +43,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Canfield needs to access your camera to process image.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Canfield needs to save your processed image in the library.</string>
 </dict>
 </plist>
